# btrfs-manager

./: LICENSE  README.md  pyproject.toml  pytest.ini
btrfs_manager/: __init__.py
btrfs_manager/application/: config_service.py  doctor_service.py  policy_service.py  snapshot_service.py
btrfs_manager/cli/: config_cli.py  main.py  policy_cli.py  snapshot_cli.py
btrfs_manager/config/: settings.py
btrfs_manager/domain/: models.py
btrfs_manager/infrastructure/: btrfs_adapter.py  snapper_adapter.py  system_checks.py
btrfs_manager/tui/: __init__.py  dashboard.py
btrfs_manager/utils/: exceptions.py  logger.py  table.py
tests/: test_cli.py  test_configs.py  test_snapshots.py
