[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btrfs-manager"
version = "0.1.0"
description = "Professional CLI tool for managing BTRFS snapshots using snapper"
authors = [{name = "SysAdmin", email = "admin@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.41.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
btrfs-manager = "btrfs_manager.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["btrfs_manager*"]
